--- a/webGate/src/main/resources/templates/ProductManagement.html
+++ b/webGate/src/main/resources/templates/ProductManagement.html
@@ -30,7 +30,7 @@
           <div class="panel panel-default">
               <div class="panel-heading"><span class="lead">Products</span></div>
               <div class="formcontainer">
-                  <form ng-submit="ctrl.submit()" name="myForm" class="form-horizontal">
+                  <form ng-submit="ctrl.submit()" name="prodForm" class="form-horizontal">
                       <input type="hidden" ng-model="ctrl.product.id" />
                       <div class="row">
                           <div class="form-group col-md-12">
